@startuml

title __USERSERVICE's Class Diagram__\n


    namespace l.edu.uj.ii.ionb.airportmanager.web.userservice {
      class pl.edu.uj.ii.ionb.airportmanager.web.userservice.AirportManagerUserService {
          {static} - DEFAULT_ADMIN : UserDetails
          {static} - DEFAULT_USER : UserDetails
          {static} - ROLE_ADMIN : String
          {static} - ROLE_USER : String
          - usersFile : File
          + AirportManagerUserService()
          + addUser()
          + loadUserByUsername()
          - escape()
          {static} - getAdmin()
          - getUser()
          {static} - getUserInstance()
          - splitLine()
          - validUsername()
      }
    }

  


    namespace l.edu.uj.ii.ionb.airportmanager.web.userservice {
      class pl.edu.uj.ii.ionb.airportmanager.web.userservice.CannotCreateUserException {
          + CannotCreateUserException()
          + CannotCreateUserException()
      }
    }

  


    namespace l.edu.uj.ii.ionb.airportmanager.web.userservice {
      class pl.edu.uj.ii.ionb.airportmanager.web.userservice.InvalidUsernameException {
          + InvalidUsernameException()
          + InvalidUsernameException()
      }
    }

  


    namespace l.edu.uj.ii.ionb.airportmanager.web.userservice {
      class pl.edu.uj.ii.ionb.airportmanager.web.userservice.UserActionBean {
          - password : String
          - passwordconf : String
          - username : String
          - validationOK : boolean
          + cancelRegistration()
          + form()
          + getPassword()
          + getPasswordconf()
          + getUsername()
          + registration()
          + setPassword()
          + setPasswordconf()
          + setUsername()
          + valid()
      }
    }
  


    namespace l.edu.uj.ii.ionb.airportmanager.web.userservice {
      class pl.edu.uj.ii.ionb.airportmanager.web.userservice.UserAlreadyExistsException {
          + UserAlreadyExistsException()
          + UserAlreadyExistsException()
      }
    }

  

  pl.edu.uj.ii.ionb.airportmanager.web.userservice.AirportManagerUserService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  pl.edu.uj.ii.ionb.airportmanager.web.userservice.InvalidUsernameException -up-|> pl.edu.uj.ii.ionb.airportmanager.web.userservice.CannotCreateUserException
  pl.edu.uj.ii.ionb.airportmanager.web.userservice.UserActionBean -up-|> pl.edu.uj.ii.ionb.airportmanager.web.beans.BaseActionBean
  pl.edu.uj.ii.ionb.airportmanager.web.userservice.UserActionBean o-- pl.edu.uj.ii.ionb.airportmanager.web.userservice.AirportManagerUserService : userService
  pl.edu.uj.ii.ionb.airportmanager.web.userservice.UserAlreadyExistsException -up-|> pl.edu.uj.ii.ionb.airportmanager.web.userservice.CannotCreateUserException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
